Noteworthy changes in version 0.9.6
------------------------------------------------


Noteworthy changes in version 0.9.5 (2004-04-06)
------------------------------------------------

 * New APIs to get hands on some more information.

 * Interface changes relative to the 0.9.4 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_ocsp_get_responder_id           NEW.
ksba_ocsp_get_cert                   NEW.
ksba_cert_get_authority_info_access  NEW.
ksba_cert_get_subject_info_access    NEW.
ksba_cms_add_smime_capability        NEW.
 

Noteworthy changes in version 0.9.4 (2004-02-20)
------------------------------------------------

 * Support for Extended Key Usage.

 * ksba_cms_identify may no return a pseudo content type for pkcs#12
   files.

 * Interface changes relative to the 0.9.3 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_reader_clear             NEW.
ksba_cert_get_ext_key_usages  NEW.
KSBA_CT_PKCS12                NEW.


Noteworthy changes in version 0.9.3 (2004-01-30)
------------------------------------------------

 * Fixed a serious bug shortly after the last release :-(.


Noteworthy changes in version 0.9.2 (2004-01-29)
------------------------------------------------

 * Cleaned up the DN label table.

 * Fixed a bug in creating CMS signed data.


Noteworthy changes in version 0.9.1 (2003-12-19)
------------------------------------------------

 * Support for OCSP (rfc2560).

 * The new function ksba_set_hash_buffer_function may be used during
   intialization to register a simple hash fucntion for internal use
   by libksba.

 * Changed the license of the manual to GPL.

 * Interface changes relative to the 0.9.0 release:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ksba_status_t                 NEW.
ksba_ocsp_t                   NEW.
ksba_ocsp_response_status_t   NEW.
ksba_ocsp_new                 NEW.
void ksba_ocsp_release        NEW.
ksba_ocsp_set_digest_algo     NEW.